syntax = "proto3";

option go_package = "entities";

package entities;

import "google/protobuf/timestamp.proto";

enum EventType {
    UNIVERSAL = 0;
    MEET = 1;
    CALL = 2;
    EMAIL = 3;
}

enum Period {
    ALL = 0;
    DAY = 1;
    WEEK = 2;
    MONTH = 3;
}



message Event {
    int32 id = 1;
    string title = 2;
    string description = 3;
    EventType type = 4;
    google.protobuf.Timestamp from = 5;
    google.protobuf.Timestamp to = 6;
}


message EventCreateRequest {
    Event event = 1;
}
message EventCreateResponse {
    Event event = 1;
}

message EventUpdateRequest {
    Event event = 1;
}
message EventUpdateResponse {
    int32 id = 1;
}

message EventDeleteRequest {
    int32 id = 1;
}
message EventDeleteResponse {
    bool success = 1;
}

message EventListRequest {
    Period period = 1;
}
message EventListResponse {
    Event event = 1;
}

service EventService {
    rpc CreateEvent(EventCreateRequest) returns (EventCreateResponse);
    rpc UpdateEvent(EventUpdateRequest) returns (EventUpdateResponse);
    rpc DeleteEvent(EventDeleteRequest) returns (EventDeleteResponse);
    rpc EventList(EventListRequest) returns (stream EventListResponse);
}